src/objects/pse__Resource_Planner_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings that determine the behavior of the resource planner.</description>
    <fields>
        <fullName>pse__Add_Holidays_On_Assignment_Adjust__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting defines the API name of a field to add Holidays when assignments are adjusted.</inlineHelpText>
        <label>Add Holidays On Assignment Adjust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Ordering__c</fullName>
        <defaultValue>&quot;name&quot;</defaultValue>
        <inlineHelpText>This setting defines the API name of a field to order assignments by and, optionally, the direction (ASC or DESC). Assignments always appear above held resource requests.</inlineHelpText>
        <label>Assignment Ordering</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Search_Fieldset_Name__c</fullName>
        <inlineHelpText>Determines which Assignment fields are searched with the text search box on the resource planner.</inlineHelpText>
        <label>Assignment Search Fieldset Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Tooltip_Field_Set__c</fullName>
        <defaultValue>&quot;Assignment_Tooltip_Field_Set&quot;</defaultValue>
        <label>Assignment Tooltip Field Set</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Columns_Field_Set__c</fullName>
        <defaultValue>&quot;Resource_Planner_Columns&quot;</defaultValue>
        <inlineHelpText>The API name of the field set that contains the columns to show on the resource planner. The field set must exist in the Contact object.</inlineHelpText>
        <label>Columns Field Set</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Default_Assignment_Future_Days__c</fullName>
        <defaultValue>270</defaultValue>
        <inlineHelpText>This setting defines the number of future days, from today, for which the enhanced Resource Planner will display assignments. For example, enter 30 to display assignments that start or end within 30 days of today.</inlineHelpText>
        <label>Default Future Days to Show Assignments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Default_Assignment_Historical_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <inlineHelpText>This setting defines the number of days prior to today for which the enhanced Resource Planner will display assignments. For example, enter 30 to display assignments that start or end in the preceding 30 days.</inlineHelpText>
        <label>Default Past Days to Show Assignments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Default_Resource_Image__c</fullName>
        <defaultValue>&quot;/resource/pse__Planners/resources/images/FForce/default_resource_image.png&quot;</defaultValue>
        <inlineHelpText>Defines a URL (absolute or relative) that points to the default image to use for resources without a profile photo. Image files of 22 pixels square work best.</inlineHelpText>
        <label>Default Resource Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Inline_Dialog__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting determines whether or not to hide the edit mode settings dialog.</inlineHelpText>
        <label>Hide Inline Edit Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Inline_Edit_Mode_THHC__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This setting determines how inline editing of assignments affects total assignment hours and end date.</inlineHelpText>
        <label>Hold total assignment hours constant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Preload_Limit__c</fullName>
        <defaultValue>100</defaultValue>
        <inlineHelpText>This setting defines the maximum number of resources that load in the background when viewing large numbers of records. Entering a higher value results in fewer loading interruptions, but uses more memory.</inlineHelpText>
        <label>Deprecated: Preload Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Res_Request_Tooltip_Field_Set__c</fullName>
        <defaultValue>&quot;Res_Request_Tooltip_Field_Set&quot;</defaultValue>
        <label>Resource Request Tooltip Field Set</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ResourceRequest_Search_Fieldset_Name__c</fullName>
        <inlineHelpText>Determines which Resource Request fields are searched with the text search box on the resource planner.</inlineHelpText>
        <label>Resource Request Search Fieldset Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Ordering__c</fullName>
        <defaultValue>&quot;name&quot;</defaultValue>
        <inlineHelpText>This setting defines the API name of a field to order held resource requests by and, optionally, the direction (ASC or DESC). Held resource requests always appear below assignments.</inlineHelpText>
        <label>Resource Request Ordering</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Search_Fieldset_Name__c</fullName>
        <inlineHelpText>Determines which Resource fields are searched with the text search box on the resource planner.</inlineHelpText>
        <label>Search Fieldset Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Tooltip_Field_Set__c</fullName>
        <defaultValue>&quot;Resource_Tooltip_Field_Set&quot;</defaultValue>
        <label>Resource Tooltip Field Set</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Restrict_Editing_Past_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, you cannot edit Resource Planner assignment and schedule hours in the past. The default value is deselected.</description>
        <inlineHelpText>If selected, you can edit Resource Planner assignment and schedule hours in the past. The default value is unselected.</inlineHelpText>
        <label>Restrict Editing Past Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Save_Column_Prefs__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected, customizations to width, order, and visibility of columns in the Resource Planner will be remembered per user.</inlineHelpText>
        <label>Save Column Preferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_V2_Planner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting determines whether your users see the enhanced (new) or classic Resource Planner.</inlineHelpText>
        <label>Use New Resource Planner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__record_load_limit__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>This setting defines the number of resources that display per request to the server. You should not adjust the Record Load Limit without first consulting Customer Support.</inlineHelpText>
        <label>Record Load Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__require_staffing_permission__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting determines whether or not your users will require a permission control, with the Staffing checkbox selected, before they can edit schedules on the enhanced Resource Planner.</inlineHelpText>
        <label>Edit Requires Staffing Permission</label>
        <type>Checkbox</type>
    </fields>
    <label>Planners - Resource</label>
</CustomObject>